--- a/admin.html
+++ b/admin.html
@@ -1,58 +1,1 @@
-<!DOCTYPE html><html lang="vi"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Affiliate Admin · Quản lý sản phẩm & đơn</title>
-<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-<style>
-:root { --bg:#0b0b0c; --card:#121214; --muted:#9a9aa0; --text:#f3f3f4; --brand:#ff5a00; --brand2:#ff8640; --radius:16px; --max:1100px; }
-*{box-sizing:border-box}html,body{margin:0;padding:0;background:#0b0b0c;color:#f3f3f4;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial}
-.container{max-width:var(--max);margin:auto;padding:0 16px}
-.panel{background:#111114;border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:16px;margin:16px 0}
-label{display:block;font-size:12px;color:#9a9aa0;margin:8px 0 6px}
-input,textarea{width:100%;padding:10px 12px;border-radius:12px;border:1px solid rgba(255,255,255,.08);background:#0f0f11;color:#f3f3f4;outline:none}
-.grid{display:grid;grid-template-columns:1.2fr .8fr;gap:16px}
-.btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.08);background:#131316;color:#f3f3f4;cursor:pointer;text-decoration:none}
-.helper{font-size:12px;color:#9a9aa0}
-</style></head><body>
-<main class="container">
-  <p class="helper">Quy trình: Khách bấm “Tôi đã chuyển” → hệ thống tạo đơn trạng thái <code>pending-confirm</code> → bạn kiểm tra bill → dùng trang này để cập nhật <code>delivered</code>.</p>
-  <div class="panel">
-    <h3>Đơn hàng (kết nối Apps Script)</h3>
-    <label>Order ID</label><input id="oid">
-    <label>Mã bí mật</label><input id="osecret">
-    <label>Product ID</label><input id="opid" value="wechat-create-01">
-    <label>Số tiền</label><input id="oamount" type="number" value="50000">
-    <label>Trạng thái</label><input id="ostatus" placeholder="pending-confirm/pending/delivered/rejected" value="delivered">
-    <label>Ghi chú kết quả</label><input id="oresult" placeholder="Đã tạo & quét lúc ...">
-    <div style="margin-top:10px;display:flex;gap:8px;flex-wrap:wrap">
-      <button class="btn" id="btnMarkDone">Đánh dấu thành công (delivered)</button>
-      <button class="btn" id="btnPush">Lưu/Update lên Google Sheet</button>
-    </div>
-    <p class="helper">API: https://script.google.com/macros/s/AKfycbyEIzP-IL2mYRI1wcUWKwH5m5adFYKFz4kc0F3wWNwR10nf1hM0b9XrRbOjL_HZs-Ku/exec</p>
-  </div>
-</main>
-
-<script>
-const GAS_URL = "https://script.google.com/macros/s/AKfycbyEIzP-IL2mYRI1wcUWKwH5m5adFYKFz4kc0F3wWNwR10nf1hM0b9XrRbOjL_HZs-Ku/exec";
-const ADMIN_KEY = "Ducthinh*123456789";
-
-const fo = { oid, osecret, opid, oamount, ostatus, oresult };
-
-async function pushOrderToServer(o){
-  const params = new URLSearchParams({...o, adminKey: ADMIN_KEY});
-  const res = await fetch(GAS_URL, { method:'POST', body: params });
-  return res.json();
-}
-
-document.getElementById('btnPush').onclick = async ()=>{
-  const o = { orderId: fo.oid.value.trim(), secret: fo.osecret.value.trim(),
-              productId: fo.opid.value.trim(), amount: Number(fo.oamount.value||0),
-              status: fo.ostatus.value.trim()||'pending', result: fo.oresult.value.trim() };
-  if(!o.orderId) return alert('Cần Order ID');
-  const r = await pushOrderToServer(o);
-  if(r.ok) alert('Đã cập nhật đơn lên Google Sheet!');
-  else alert('Lỗi: ' + (r.error||'unknown'));
-};
-
-document.getElementById('btnMarkDone').onclick = ()=>{ fo.ostatus.value='delivered'; };
-</script>
-</body></html>
+<!doctype html><title>admin</title>
