--- a/index.html
+++ b/index.html
@@ -1,4 +1,155 @@
 <!DOCTYPE html><html lang="vi"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Dịch vụ tạo & quét QR Wechat</title></head><body>
-<h3>Bản v10 (rút gọn để tải thành công). Sau khi tải về, bạn thay bằng file v10 đầy đủ mình đã gửi mô tả trước đó.</h3>
+<title>Dịch vụ tạo & quét QR Wechat</title>
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<style>
+:root { --bg:#0b0b0c; --card:#121214; --muted:#9a9aa0; --text:#f3f3f4; --brand:#ff5a00; --brand2:#ff8640; --radius:16px; --max:1200px; }
+*{box-sizing:border-box}html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial}
+.container{max-width:var(--max);margin:auto;padding:0 16px}
+header{position:sticky;top:0;z-index:40;background:linear-gradient(0deg,rgba(11,11,12,.7),rgba(11,11,12,.9));backdrop-filter:blur(6px);border-bottom:1px solid rgba(255,255,255,.06)}
+.head{display:grid;grid-template-columns:1fr auto;gap:12px;align-items:center;padding:14px 0}
+.logo{font-weight:800;letter-spacing:.3px}
+.cta{display:flex;gap:10px}
+.btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.08);background:#131316;color:#f3f3f4;cursor:pointer;text-decoration:none}
+.btn.primary{background:linear-gradient(135deg,var(--brand),var(--brand2));border:none;color:#fff;font-weight:800}
+.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
+@media(max-width:1100px){.grid{grid-template-columns:repeat(2,1fr)}}
+@media(max-width:820px){.grid{grid-template-columns:1fr}}
+.card{background:var(--card);border:1px solid rgba(255,255,255,.06);border-radius:var(--radius);overflow:hidden;display:flex;flex-direction:column}
+.thumb{aspect-ratio:16/10;overflow:hidden;background:#0a0a0b}.thumb img{width:100%;height:100%;object-fit:cover;display:block}
+.body{padding:12px}.title{font-weight:800}.meta{display:flex;align-items:center;justify-content:space-between;font-size:13px;color:var(--muted)}
+.price{display:flex;gap:8px}.old{text-decoration:line-through;color:var(--muted)}
+.section{margin:22px 0}
+.badges{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}.pill{padding:6px 10px;border:1px solid rgba(255,255,255,.08);border-radius:999px;font-size:12px;opacity:.9}
+/* Modal */
+#buyModal{display:none;position:fixed;inset:0;z-index:9999;align-items:center;justify-content:center;background:rgba(0,0,0,.6)}
+.modal-card{width:560px;background:#0f0f11;padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,.06)}
+.helper{font-size:12px;color:#9a9aa0}
+/* QR sizing */
+#payQR{width:min(80vw,520px);height:auto;background:#fff;padding:10px;border-radius:14px;box-shadow:0 0 12px rgba(0,0,0,.4);image-rendering:crisp-edges}
+</style></head><body>
+<header>
+  <div class="container head">
+    <div class="logo">Dịch vụ tạo & quét QR Wechat</div>
+    <div class="cta"><a id="zaloBtn" class="btn primary" href="https://zalo.me/0964451836" target="_blank" rel="noopener">Liên hệ Zalo</a></div>
+  </div>
+</header>
+
+<main class="container">
+  <section class="section">
+    <h1 style="margin:0 0 6px">Gói tạo tài khoản & hỗ trợ quét Wechat</h1>
+    <p class="helper">Chọn gói, quét QR thanh toán, sau đó <strong>gửi ảnh bill</strong> vào Zalo 0964451836. Mình nhận thông báo → hỗ trợ quét ngay → cập nhật trạng thái thành công.</p>
+    <div class="badges"><span class="pill">Xử lý nhanh</span><span class="pill">Hỗ trợ tận tâm</span><span class="pill">Bảo mật</span></div>
+  </section>
+
+  <section class="section">
+    <div id="results" class="grid"></div>
+  </section>
+</main>
+
+<!-- BUY MODAL -->
+<div id="buyModal">
+  <div class="modal-card">
+    <h3 id="buyTitle" style="margin:0 0 8px">Mua lượt tạo tài khoản</h3>
+    <div style="margin:8px 0"><strong>Gói:</strong> <span id="buyProd"></span></div>
+    <div style="margin:8px 0"><strong>Số tiền:</strong> <span id="buyAmount"></span> VND</div>
+    <div style="margin:8px 0">
+      <img id="payQR" src="assets/qr.png" alt="QR thanh toán">
+      <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:6px">
+        <button class="btn" onclick="openQrFullscreen()">Phóng to QR</button>
+        <a class="btn" href="assets/qr.png" download="qr.png">Tải QR</a>
+      </div>
+    </div>
+    <div class="helper">Nội dung chuyển khoản (ghi đúng): <code id="ckNote"></code>
+      <button class="btn" onclick="navigator.clipboard.writeText(document.getElementById('ckNote').textContent)">Copy</button>
+    </div>
+    <div class="helper">Sau khi chuyển, <strong>gửi ảnh bill</strong> + <em>Order ID</em> & <em>Mã bí mật</em> cho mình.</div>
+    <div style="margin:8px 0"><label>Order ID: <strong id="orderIdText"></strong></label></div>
+    <div style="margin:8px 0"><label>Mã bí mật: <strong id="secretText"></strong></label></div>
+    <div style="display:flex;gap:8px;margin-top:10px;flex-wrap:wrap">
+      <button id="btnCopy" class="btn">Copy Order ID & Mã</button>
+      <a id="btnZaloSend" class="btn primary" href="https://zalo.me/0964451836" target="_blank" rel="noopener">Mở Zalo</a>
+      <a id="btnStatus" class="btn" href="#" target="_blank" rel="noopener">Xem trạng thái</a>
+      <a id="btnConfirm" class="btn" href="#" target="_blank" rel="noopener">Tôi đã chuyển (gửi bill)</a>
+      <button id="btnCloseBuy" class="btn">Đóng</button>
+    </div>
+    <div id="buyMsg" class="helper" style="margin-top:8px"></div>
+  </div>
+</div>
+<!-- fullscreen overlay shows original file -->
+<div id="qrFull" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,.9);z-index:10000;align-items:center;justify-content:center">
+  <img src="assets/qr.png" alt="QR lớn" style="max-width:92vw;max-height:92vh;background:#fff;padding:12px;border-radius:16px;box-shadow:0 0 16px rgba(0,0,0,.5)">
+</div>
+
+<script>
+const PRODUCTS = [{
+  id: "wechat-create-01",
+  name: "Gói 1 lượt tạo WeChat",
+  price: 50,
+  oldPrice: 80,
+  img: "assets/photo.png"
+}];
+const FORM_URL = "";
+const GAS_URL = "https://script.google.com/macros/s/AKfycbyEIzP-IL2mYRI1wcUWKwH5m5adFYKFz4kc0F3wWNwR10nf1hM0b9XrRbOjL_HZs-Ku/exec";
+
+function money(n){try{return Number(n).toLocaleString('vi-VN',{style:'currency',currency:'VND'}).replace('₫','đ')}catch(e){return n}}
+function disc(p){return (p.price&&p.oldPrice)?('-'+Math.round((1-p.price/p.oldPrice)*100)+'%'):''}
+function card(p){
+  const now=p.price?money(p.price*1000):'Liên hệ'; const old=p.oldPrice?money(p.oldPrice*1000):'';
+  return `<article class="card"><div class="thumb"><img src="${p.img||''}" alt="${p.name||''}"></div>
+  <div class="body"><div class="title">${p.name||''}</div>
+  <div class="meta"><div class="price">${now} ${old?`<span class="old">${old}</span>`:''}</div><div>${disc(p)}</div></div>
+  <div style="margin-top:8px;display:flex;gap:8px;flex-wrap:wrap"><a class="btn primary" href="javascript:void(0)" data-buy="${p.id}">Mua lượt tạo tài khoản</a></div></div></article>`;
+}
+document.getElementById('results').innerHTML = PRODUCTS.map(card).join('');
+document.querySelectorAll('[data-buy]').forEach(b=>b.onclick=()=>{
+  const id=b.getAttribute('data-buy'); const p=PRODUCTS.find(x=>x.id===id);
+  openBuyModal(p);
+});
+
+// BUY MODAL logic
+const modal = document.getElementById('buyModal');
+const aStatus = document.getElementById('btnStatus');
+const btnCopy = document.getElementById('btnCopy');
+const btnConfirm = document.getElementById('btnConfirm');
+let CURRENT_ORDER = null;
+
+function openBuyModal(product){
+  const orderId = (product.id||'o') + '-' + Date.now().toString(36);
+  const secret = Math.random().toString(36).slice(2,6).toUpperCase();
+  CURRENT_ORDER = { orderId, secret, productId: product.id, amount: (product.price||0)*1000 };
+  document.getElementById('buyProd').textContent = product.name;
+  document.getElementById('buyAmount').textContent = CURRENT_ORDER.amount.toLocaleString();
+  document.getElementById('orderIdText').textContent = orderId;
+  document.getElementById('secretText').textContent = secret;
+  document.getElementById('ckNote').textContent = orderId;
+  aStatus.href = 'o.html?oid=' + encodeURIComponent(orderId);
+
+  btnConfirm.onclick = async (e)=>{
+    e.preventDefault();
+    try {
+      const body = new URLSearchParams({
+        action:'init', orderId, secret,
+        productId: product.id, amount: String(CURRENT_ORDER.amount),
+        status: 'pending-confirm'
+      });
+      await fetch(GAS_URL, { method:'POST', body });
+    } catch(e) { console.warn('init failed', e); }
+    const href = FORM_URL
+      ? FORM_URL
+      : 'confirm.html?oid='+encodeURIComponent(orderId)+'&sec='+encodeURIComponent(secret)+'&amt='+CURRENT_ORDER.amount;
+    window.location.href = href;
+  };
+
+  modal.style.display='flex';
+}
+document.getElementById('btnCloseBuy').onclick = ()=>{ modal.style.display='none'; };
+function openQrFullscreen(){ document.getElementById('qrFull').style.display='flex'; }
+document.getElementById('qrFull').onclick = ()=>{ document.getElementById('qrFull').style.display='none'; };
+
+btnCopy.onclick = async ()=>{
+  const txt = `Order ID: ${CURRENT_ORDER.orderId}\nMã bí mật: ${CURRENT_ORDER.secret}\nGói: ${CURRENT_ORDER.productId}\nSố tiền: ${CURRENT_ORDER.amount.toLocaleString()} VND`;
+  try{ await navigator.clipboard.writeText(txt); document.getElementById('buyMsg').textContent = 'Đã copy thông tin. Gửi kèm ảnh bill qua Zalo.'; }catch(e){ document.getElementById('buyMsg').textContent = 'Hãy tự copy thông tin: ' + txt; }
+};
+</script>
 </body></html>
