--- a/o.html
+++ b/o.html
@@ -1,1 +1,32 @@
-<!doctype html><title>o</title>
+<!DOCTYPE html><html lang="vi"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Theo dõi đơn</title>
+<style>body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#0b0b0c;color:#f3f3f4;margin:0;display:grid;place-items:center;min-height:100vh}
+.card{width:520px;background:#111114;border:1px solid rgba(255,255,255,.1);border-radius:14px;padding:16px}
+.input{width:100%;padding:10px 12px;border-radius:12px;border:1px solid rgba(255,255,255,.1);background:#0f0f11;color:#f3f3f4;margin-bottom:10px}
+.btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.08);background:#131316;color:#f3f3f4;cursor:pointer}
+small{color:#9a9aa0}</style></head><body>
+<div class="card">
+  <h3 style="margin-top:0">Theo dõi trạng thái</h3>
+  <input id="oid" class="input" placeholder="Order ID">
+  <input id="sec" class="input" placeholder="Mã bí mật">
+  <button id="btn" class="btn">Kiểm tra</button>
+  <div id="out" style="margin-top:10px"></div>
+</div>
+<script>
+const GAS_URL = "https://script.google.com/macros/s/AKfycbyEIzP-IL2mYRI1wcUWKwH5m5adFYKFz4kc0F3wWNwR10nf1hM0b9XrRbOjL_HZs-Ku/exec";
+const q = new URL(location.href).searchParams;
+if(q.get('oid')) document.getElementById('oid').value = q.get('oid');
+document.getElementById('btn').onclick = ()=>{
+  const oid = document.getElementById('oid').value.trim();
+  const sec = document.getElementById('sec').value.trim();
+  if(!oid || !sec) return alert('Nhập Order ID và Mã bí mật');
+  fetch(GAS_URL + '?action=get&orderId=' + encodeURIComponent(oid))
+    .then(r=>r.json()).then(o=>{
+      if(!o) return out('Không tìm thấy đơn (chưa nhấn Tôi đã chuyển?).');
+      if((o.secret||'') !== sec) return out('Mã bí mật không đúng.');
+      out(`Trạng thái: <strong>${o.status}</strong><br>Ghi chú: ${o.result||'N/A'}`);
+    }).catch(()=> out('Không tải được trạng thái.'));
+};
+function out(html){ document.getElementById('out').innerHTML = html; }
+</script>
+</body></html>
